@@ -29,6 +29,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import org.restlet.util.EmptyValue;
 import org.restlet.util.WrapperList;
 
 /**
