@@ -58,7 +58,11 @@ Changes log
  - Moved LogFilter and StatusFilter to com.noelios.restlet.impl.
  - Moved ClientList and ServerList to org.restlet.util 
  - Moved ScorerList to org.restlet.util and changed it to an interface.
- 
+ - Renamed ClientData and ServerData to ClientInfo and ServerInfo to be less ambiguous about the type of data.
+ - Moved EmptyValue to org.restlet.util.
+ - Moved Resource from org.restlet.data to org.restlet.
+ - Renamed ConditionData to Conditions.
+
 [Other changes] 
  - Updated Jetty 6 extension to final 6.0 release.
  - Added Resource.setVariants() and setIdentifiers() methods. Can be easier than doing a getVariants().clear() then a getVariants().addAll(newList). 
